RESOLVED FIXED120524
Compile warning fix: In graphics/cairo/GraphicsContextCairo.cpp.
https://bugs.webkit.org/show_bug.cgi?id=120524
Summary Compile warning fix: In graphics/cairo/GraphicsContextCairo.cpp.
Gábor Ábrahám
Reported 2013-08-30 06:27:25 PDT
In Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp There is an unused parameter in GraphicsContext::fillRectWithRoundedHole function.
Attachments
Proposed patch (1.44 KB, patch)
2013-08-30 06:29 PDT, Gábor Ábrahám
no flags
Fixed patch (1.42 KB, patch)
2013-08-30 08:48 PDT, Gábor Ábrahám
no flags
Gábor Ábrahám
Comment 1 2013-08-30 06:29:50 PDT
Created attachment 210098 [details] Proposed patch
Darin Adler
Comment 2 2013-08-30 08:01:48 PDT
Comment on attachment 210098 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=210098&action=review > Source/WebCore/ChangeLog:8 > + No new tests (OOPS!). Commit queue won’t land a patch with the word OOPS in it.
WebKit Commit Bot
Comment 3 2013-08-30 08:24:23 PDT
Comment on attachment 210098 [details] Proposed patch Rejecting attachment 210098 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 210098, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/1648125
Gábor Ábrahám
Comment 4 2013-08-30 08:48:35 PDT
Created attachment 210116 [details] Fixed patch
WebKit Commit Bot
Comment 5 2013-08-30 09:38:10 PDT
Comment on attachment 210116 [details] Fixed patch Clearing flags on attachment: 210116 Committed r154888: <http://trac.webkit.org/changeset/154888>
Note You need to log in before you can comment on or make changes to this bug.