Fix unused parameter warning in graphics/cairo/GraphicsContextCairo.cpp file. https://bugs.webkit.org/show_bug.cgi?id=120524

Patch by Gabor Abraham <abrhm@inf.u-szeged.hu> on 2013-08-30
Reviewed by Darin Adler.

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::fillRectWithRoundedHole):

Canonical link: https://commits.webkit.org/138516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154888 268f45cc-cd09-0410-ab3c-d52691b4dbfc